<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Envibus</string>
    <string name="results">Résultat</string>
    <string name="search">Recherche</string>
    <string name="action_settings">Paramètres</string>
    <string name="depart">Départ</string>
    <string name="arriver">Arrivée</string>
    <string name="heure">Date et Heure</string>
    <string name="favorites"> Favoris </string>
    <string name="time_table"> Horaires </string>
    <string name="search_input_hint">Adresse, Commune, Arrêt</string>

    <string-array name="stops_array">
        <item>Eganaude</item>
        <item>Inria</item>
        <item>Centre Commercial</item>
        <item>Templiers</item>
        <item>Chappelle des Combes</item>
        <item>ZI des Trois Moulins</item>
        <item>Pole d\'echange</item>
        <item>Pin Montard</item>
    </string-array>
    <string name="title_activity_results">ResultsActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
