<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:clickable="false">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/journeyCard"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/toolbar"
        card_view:cardElevation="4dp"
        card_view:contentPadding="5dp"
        card_view:cardBackgroundColor="@color/windowBackground"
        android:layout_marginRight="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:text="@string/depart"
                android:id="@+id/depart"
                android:layout_alignParentStart="false"
                android:labelFor="@+id/editDepart"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editDepart"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/depart"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:inputType="textCapCharacters"
                android:textColor="@color/material_grey_900"
                android:hint ="@string/search_input_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:text="@string/arriver"
                android:id="@+id/arriver"
                android:layout_below="@+id/editDepart"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false"
                android:labelFor="@+id/editArriver"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editArriver"
                android:labelFor="@string/arriver"
                android:layout_below="@+id/arriver"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:inputType="textCapCharacters"
                android:textColor="@color/material_grey_900"
                android:hint ="@string/search_input_hint"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:text="@string/heure"
                android:id="@+id/heure"
                android:layout_below="@+id/editArriver"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false" />



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heure"
                android:id="@+id/timeRow"
                android:layout_alignStart="@+id/heure"
                android:layout_marginTop="5dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/date_button"
                    android:src="@drawable/ic_action_event"
                    android:background="@color/windowBackground"
                    android:onClick="showDatePickerDialog"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_marginStart="5dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/material_grey_900"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:onClick="showDatePickerDialog"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/hour_button"
                    android:src="@drawable/ic_action_schedule"
                    android:background="@color/windowBackground"
                    android:layout_gravity="center_horizontal"
                    android:onClick="showTimePickerDialog"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_marginStart="5dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/material_grey_900"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="right"
                    android:onClick="showTimePickerDialog" />


            </TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/search"
                android:layout_centerVertical="true"
                android:layout_marginBottom="2dp"
                android:background="@color/colorPrimary"
                android:enabled="true"
                android:focusable="true"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:layout_below="@+id/timeRow"
                android:textColor="@color/primary_material_light"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_alignEnd="@+id/editArriver"
                android:layout_alignParentStart="true"
                android:onClick="doSearch"/>

            <TextView
                android:id="@+id/error"
                android:layout_marginStart="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_below="@+id/search"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="2dp"
        android:horizontalSpacing="2dp"
        android:stretchMode="columnWidth"
        android:id="@+id/gridLayout"
        android:paddingRight="7dp"
        android:layout_below="@+id/journeyCard"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginRight="4dp">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/favoritesCard"
            android:layout_gravity="center"
            android:layout_width="185dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            card_view:cardElevation="4dp"
            card_view:contentPadding="5dp"
            card_view:cardBackgroundColor="@color/colorAccent"
            android:layout_row="1"
            android:layout_column="0">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:text="@string/favorites"
                android:id="@+id/favorites"
                android:layout_alignParentStart="false"
                android:labelFor="@+id/editDepart"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/timetableCard"
            android:layout_gravity="center"
            android:layout_width="185dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            card_view:cardElevation="4dp"
            card_view:contentPadding="5dp"
            card_view:cardBackgroundColor="@color/inputTextColor"
            android:layout_row="1"
            android:layout_column="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:text="@string/time_table"
                android:id="@+id/horaires"
                android:layout_alignParentStart="false"
                android:labelFor="@+id/editDepart"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false" />

        </android.support.v7.widget.CardView>
    </GridLayout>


</RelativeLayout>
